# tp_cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  main.c
linters/: run.sh
project/: main_naive.c  main_parallel.c  test_data.txt
project/include/: task.h
project/naive/: naive.c  naive.h
project/parallel/: parallel.c  parallel.h
project/src/: main.c  task.c
project/test/: gtests.cpp
project/test/data/: in1.txt
tests/data/: in_1.txt  in_2.txt  in_3.txt  in_4.txt
tests/src/: gtests.cpp
